<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/scrollView1"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

	<RelativeLayout
	    android:id="@+id/myLayout" 	    
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".MainActivity" >

		<TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="15dp"
	        android:text="@string/info_dev" />
		
		<TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="45dp"
	        android:text="@string/model_dev" />
	
		<TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="75dp"
	        android:text="@string/ver_android" />	
		
		<TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="105dp"
	        android:text="@string/ram_total" />
				
		<TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="135dp"
	        android:text="@string/ram_free" />
					
		<TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="165dp"
	        android:text="@string/disk_total" />
			
		<TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="195dp"
	        android:text="@string/disk_free" />
			
		<TextView
	        android:id="@+id/textView8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="225dp"
	        android:text="@string/cpu" />
				
		<TextView
	        android:id="@+id/textView9"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="255dp"
	        android:text="@string/nivel_baterie" />
		
		<TextView
	        android:id="@+id/textView20"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="285dp"
	        android:text="@string/wifi_tx" />
				
		<TextView
	        android:id="@+id/textView21"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="315dp"
	        android:text="@string/wifi_rx" />
		
		<TextView
	        android:id="@+id/textView22"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="345dp"
	        android:text="@string/wifi_energy" />
		
		<TextView
	        android:id="@+id/model_dev_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="200dp"
	        android:layout_marginTop="45dp"
	        android:inputType="none" />
		
		<TextView
	        android:id="@+id/ver_android_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="200dp"
	        android:layout_marginTop="75dp"
	        android:inputType="none" />
		
		<TextView
	        android:id="@+id/ram_total_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="200dp"
	        android:layout_marginTop="105dp"
	        android:inputType="none" />
	
		<TextView
	        android:id="@+id/ram_free_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="200dp"
	        android:layout_marginTop="135dp"
	        android:inputType="none" />
		
		<TextView
	        android:id="@+id/disk_total_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="200dp"
	        android:layout_marginTop="165dp"
	        android:inputType="none" />
			
		<TextView
	        android:id="@+id/disk_free_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="200dp"
	        android:layout_marginTop="195dp"
	        android:inputType="none" />
		
		<TextView
	        android:id="@+id/cpu_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="200dp"
	        android:layout_marginTop="225dp"
	        android:inputType="none" />
		
		<TextView
	        android:id="@+id/battery_level_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="200dp"
	        android:layout_marginTop="255dp"
	        android:inputType="none" />
		
		<TextView
	        android:id="@+id/wifi_tx_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="200dp"
	        android:layout_marginTop="285dp"
	        android:inputType="none" />
		
		<TextView
	        android:id="@+id/wifi_rx_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="200dp"
	        android:layout_marginTop="315dp"
	        android:inputType="none" />
		
		<TextView
	        android:id="@+id/wifi_energy_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="200dp"
	        android:layout_marginTop="345dp"
	        android:inputType="none" />
	
		<Button android:id="@+id/app_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
	        android:layout_marginTop="375dp"
            android:text="@string/app" />

		</RelativeLayout>
				
</ScrollView>
    
    

	
